# ascii-art-converter-website

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
examples/: ascii_to_image.rs  image_to_ascii.rs
src/: converter.rs  lib.rs  main.rs  website.rs
src/converter/: ascii.rs  dimension.rs  image.rs  symbol_map.rs
src/website/: ascii_form_params.rs  html_template.rs  image_form_params.rs  input_processors.rs
static/: ascii-to-image.html  image-to-ascii.html  index.html
static/templates/: ascii-to-image-result.html  error.html  image-to-ascii-result.html
test_assets/ascii/: castle.txt  freakazoid-large.txt  freakazoid-small.txt
